--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "author": "Kinder0102",
   "main": "./src/index.js",
   "scripts": {
-    "build": "esbuild ./src/index.js --bundle --minify --outfile=./dist/ajax-form.min.js"
-  },
-  "dependencies": {
-    "js-common": "github:Kinder0102/js-common"
+    "build": "esbuild ./src/index.js --bundle --sourcemap --minify --outfile=./dist/ajax-form.min.js"
   },
   "devDependencies": {
     "esbuild": "^0.27.0"
+  },
+  "dependencies": {
+    "js-common": "github:Kinder0102/js-common"
   }
 }
